完善项目配置